<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.scorg.regform.fragments.FeedbackFormFragment">

    <com.scorg.regform.customui.CustomTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/view_margin"
        android:padding="@dimen/dp12"
        android:textAllCaps="true"
        android:textColor="@color/title_background"
        android:textSize="18sp"
        app:customFont="@string/roboto_medium"
        tools:text="@string/feedback" />

    <com.scorg.regform.customui.CustomViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp10"
        android:paddingTop="@dimen/view_margin">

        <com.scorg.regform.customui.CustomButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:background="@drawable/button_selector"
            android:padding="@dimen/dp10"
            android:text="@string/previous"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />

        <com.scorg.regform.customui.CustomButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_selector"
            android:padding="@dimen/dp10"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />

        <com.scorg.regform.customui.CustomButton
            android:id="@+id/submitEditButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_selector"
            android:padding="@dimen/dp10"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />

    </RelativeLayout>

</LinearLayout>
