<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:background="@drawable/rounded_back_white"
        android:orientation="vertical">

        <com.scorg.regform.customui.CustomTextView
            android:id="@+id/textView_dialog_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_marginTop="@dimen/view_margin"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/field_text_size"
            tools:text="@string/app_name" />

        <com.scorg.regform.customui.CustomEditText
            android:id="@+id/et_server_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:layout_margin="@dimen/view_margin"
            android:maxLines="1"
            android:textSize="@dimen/field_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.widget.Space
                android:id="@+id/seperator"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white" />

            <com.scorg.regform.customui.CustomButton
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/seperator"
                android:layout_toStartOf="@+id/seperator"
                android:background="@drawable/button_selector"
                android:text="@string/ok"
                android:textColor="@color/white" />

            <com.scorg.regform.customui.CustomButton
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/seperator"
                android:layout_toRightOf="@id/seperator"
                android:background="@drawable/button_selector"
                android:text="@string/cancel"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>